# NBBackend

./: .env.example  .gitignore  README.md  passenger_wsgi.py  pyproject.toml  requirements.txt  words_blacklist.txt  words_whitelist.txt
apps/accounts/: adapters.py  admin.py  models.py  serializers.py  signals.py  todo.md  urls.py  views.py
apps/blogs/: admin.py  admin_views.py  models.py  serializers.py  urls.py  views.py
apps/cart/: admin.py  models.py  serializers.py  urls.py  views.py
apps/coupons/: admin.py  models.py  serializers.py  urls.py  views.py
apps/customers/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/: admin.py  admin_urls.py  admin_views.py  helpers.py  models.py  serializers.py  urls.py  views.py
apps/payments/: models.py  urls.py  views.py
apps/products/: admin.py  admin_urls.py  admin_views.py  models.py  permissions.py  serializers.py  todo.md  urls.py  views.py
apps/search/: models.py  serializers.py  urls.py  views.py
apps/shipping/: admin.py  helpers.py  models.py  serializers.py  todo.md  urls.py  views.py
apps/store/: admin.py  models.py  serializers.py  urls.py  views.py
config/: urls.py
fixtures/coupon/: coupon.json  discounttype.json
fixtures/product/: brand.json  category.json  product.json  stock.json  subcategory.json  subsubcategory.json
fixtures/store/: about.json  contact.json
fixtures/user/: email.json  user.json  userdetail.json
system/: asgi.py  settings.py  todo.md  urls.py  wsgi.py
templates/admin/: wishlist_report.html
templates/payment/: test.html
tools/: custom_middlewares.py  custom_permissions.py  file_server.py  filestorage_helper.py  fileupload_helper.py  lionparcel_helper.py  profanity_helper.py  recaptcha_helper.py
tools/tests/: test_access_token_to_body_middlewares.py  test_bearertoken_middlewares.py  test_file_server.py  test_filestorage_helper.py  test_fileupload_helper.py  (+4 more)
(+26 files in other folders)
