[tool.poetry]
name = "nanobeepa"
version = "0.1.0"
description = "Backend for NanoBeepa"
authors = ["Kusuma <sensnerd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
mysqlclient = "^2.1.1"
django-filter = "^23.2"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.2.2"
cryptography = "^41.0.4"
pillow = "^10.0.1"
uuid = "^1.30"
django-allauth = "0.60.1"
dj-rest-auth = "5.0.2"
django-import-export = "^3.2.0"
midtransclient = "^1.4.1"
black = "^23.9.1"
pymongo = "^4.5.0"
opencv-python = "^4.8.1.78"
django-cachalot = "^2.6.1"
django-redis = "^5.4.0"
sentry-sdk = {extras = ["django"], version = "^1.31.0"}
thefuzz = "^0.20.0"
django-colorfield = "^0.10.1"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "system.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
